[project]
name = "anyaudiobook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "black>=25.1.0",
    "ebooklib>=0.18",
    "edge-tts>=7.0.0",
    "marimo>=0.11.22",
    "pydantic>=2.10.6"
]

[dependency-groups]
dev = ["isort>=6.0.0", "mypy>=1.15.0", "ruff>=0.9.6"]
