[project]
name = "ANYaudiobook"
version = "0.1.0"
description = "A Python tool to convert ebooks to audiobooks using Microsoft Edge's Text-to-Speech engine."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "black>=25.1.0",
    "ebooklib>=0.18",
    "edge-tts>=7.0.0",
    "marimo>=0.11.22",
    "mutagen>=1.47.0",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = ["isort>=6.0.0", "mypy>=1.15.0", "ruff>=0.9.6"]
